[tool.poetry]
name = "uitclass"
version = "0.1.0"
description = ""
authors = ["Yasar Abdul Razq <Yasardveloper786@gmail.come>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
